Änderung an der Doku

--- a/Documentation/ObsidianMD/Projectmanagement/Dev-Diaries/Mats/2023.11.28.md
+++ b/Documentation/ObsidianMD/Projectmanagement/Dev-Diaries/Mats/2023.11.28.md
@@ -1,6 +1,17 @@
-## 2023.11.29
+# 2023.11.29
 
 
-HTML und CSS:
-    
+### HTML und CSS:
 
+1. Erstellen einer Sandbox Website mit Bootstrap. 
+    1. Erstellen von verschieden grundlegeneden Designideen
+        - Models für Profile overview per card grid und slides kreieren.
+        - Login Fenster erstellt. 
+        - Sidbar oder eine normale Bar.
+        (Wurde im Meeting besprochen. [Meeting02](2023.11.29.md))
+
+
+
+2.  Weiterbilden im Bereich Web-Development
+    1. 
+    2. 
