--- a/Documentation/ObsidianMD/Projectmanagement/Meetings/2023.11.29.md
+++ b/Documentation/ObsidianMD/Projectmanagement/Meetings/2023.11.29.md
@@ -1,8 +1,14 @@
-Teilnehmer:
+# 2023.11.29
+
+## Meeting 02
+
+### Uhrzeit: xx:xx Uhr
+
+### Teilnehmer:
 - Mats
 - Sascha
 
-Themen:
+### Themen:
 - Struktur Obsidian Vault
 - Obsidian Erweiterungen, welche jeder verwenden sollte
 	- Excalidraw und Dataview zur verbesserten Visualisierung des Vaults
@@ -10,7 +16,7 @@ Themen:
 - Struktur Github Projekt
 
 
-Kurzbeschreibung:
+### Kurzbeschreibung:
 Die **Struktur** wurde durch Sascha größtenteils vorgegeben. Mats Meinung wurde hierbei berücksichtigt.
 
 **Mats stellte die Anforderung** diverse Erweiterungen für Obsidian zu nutzen, welche gleichzeitig den Markdown-Standard erweitert. Entsprechend wurde sich darauf geeinigt, dass im Falle einer Inkompatibilität mit PDF-Konvertern, er die weitere Überarbeitung übernehmen würde. Gleichzeitig darf er jedoch eine Liste an Erweiterungen vorlegen, welche Pflicht ist bei der Verwendung vom Obsidian Vault.
@@ -21,3 +27,15 @@ Jeder Entwickler hat nun eigene Ordner für ein Dev-Diary, welches er führen ka
 **Schreibe: ** "Es traten Probleme beim Laden des Weboverlays auf. Es wurde Lösungsansatz XY verwendet und mit Person Z abgesprochen"
 
 Die Struktur des Github-Projekts wurde überarbeitet aufgrundlage der Erstellung einer neuen Microsoft Visual Studio 2022 Solution-Datei.
+
+___
+
+### Uhrzeit:
+
+
+### Teilnehmer:
+
+### Thema:
+
+
+
