Änderung an der Doku

--- a/Documentation/ObsidianMD/Projectmanagement/Dev-Diaries/Mats/2023.11.28.md
+++ b/Documentation/ObsidianMD/Projectmanagement/Dev-Diaries/Mats/2023.11.28.md
@@ -1,4 +1,4 @@
-# 2023.11.29
+# 2023.11.28
 
 
 ### HTML und CSS:
@@ -8,10 +8,12 @@
         - Models für Profile overview per card grid und slides kreieren.
         - Login Fenster erstellt. 
         - Sidbar oder eine normale Bar.
-        (Wurde im Meeting besprochen. [Meeting02](2023.11.29.md))
+        (Wurde alles Meeting besprochen. [go to Meeting](Projectmanagement/Mettings/2023.11.2.md))
 
 
 
-2.  Weiterbilden im Bereich Web-Development
-    1. 
-    2. 
+2.  Weiterbilden oder aufrischen im Bereich Web-Development
+    1. Basis wissen aufgefrischt im Bereich Syntax 
+    2. angeschaut und weiter informiert über HTML class und id zum bereich div tag.
+    3. CSS Design Optionen angeschaut und abgewogen ob diese hilfreich sein könnten für unseres Projekt.
+
