--- a/Documentation/ObsidianMD/Projectmanagement/Meetings/2023.11.29.md
+++ b/Documentation/ObsidianMD/Projectmanagement/Meetings/2023.11.29.md
@@ -1,6 +1,6 @@
 # 2023.11.29
 
-## Meeting 02
+## Meeting 01
 
 ### Uhrzeit: xx:xx Uhr
 
@@ -30,12 +30,21 @@ Die Struktur des Github-Projekts wurde überarbeitet aufgrundlage der Erstellung
 
 ___
 
-### Uhrzeit:
+## Meeting 02
 
+### Uhrzeit:
+	20:00Uhr
 
 ### Teilnehmer:
+Mats
+Sascha
 
 ### Thema:
+	Besprechung über die Style und Design Frage der Website und was benutzt werden sollte. Was ist Must have was ist nice to have.
+
+	Sascha sollte durch dieses Meeting nicht nur informiert werden sondern auch eingebunden werden wo die Reise hingeht.(die anderen Mitarbeiter werden auch noch informiert)
 
 
+### Kurzbeschreibung:
 
+	nicht nötig.
