--- a/Documentation/ObsidianMD/Projectmanagement/Dev-Diaries/Mats/2023.11.29.md
+++ b/Documentation/ObsidianMD/Projectmanagement/Dev-Diaries/Mats/2023.11.29.md
@@ -1,15 +1,25 @@
-
 # 2023.11.29
 
+### Gesamtzeit:
+    06 Stunden 00 Minuten 00 Sekunden
 
 ### HTML und CSS:
 
+1. Erstellen einer Sandbox Website mit Bootstrap. 
+    1. Erstellen von verschieden grundlegeneden Designideen
+        - Models für Profile overview per card grid und slides kreieren.
+        - Login Fenster erstellt. 
+        - Sidbar oder eine normale Bar.
+        (Wurde alles Meeting besprochen. [go to Meeting](Projectmanagement/Mettings/2023.11.2.md))
+
+    Zeit: 04 Stunden 00 Minuten
+
+2. Pause von 2 Stunden 00 Minuten.
 
 
+3.  Weiterbilden oder aufrischen im Bereich Web-Development
+    1. Basis wissen aufgefrischt im Bereich Syntax. 
+    2. angeschaut und weiter informiert über HTML class und id zum bereich div Tag.
+    3. CSS Design Optionen angeschaut und abgewogen ob diese hilfreich sein könnten für unseres Projekt.
 
-
-
-
-
-
-
+    Zeit: 02 Stunden 00 Minuten
