--- a/Documentation/ObsidianMD/Projectmanagement/Meetings/2023.11.30.md
+++ b/Documentation/ObsidianMD/Projectmanagement/Meetings/2023.11.30.md
@@ -15,8 +15,11 @@
     Sebastian
 
 ### Themen:
-
-
+- Geplante Frameworks (Bootstrap, NodeJS und Electron) 
+- Erläuterung Architektur 
+- Obsidian und Markdown - Bestehende Doku und allgemeine Verpflichtungen für jeden 
+- Aufgabenverteilung - Frontend/Backend - Wer macht was?
+- Crashkurs - C++ 
 
 ### Kurzbeschreibung:
 
