--- a/4. Documentation/ObsidianMD/Projectmanagement/Meetings/2023.11.30.md
+++ b/4. Documentation/ObsidianMD/Projectmanagement/Meetings/2023.11.30.md
@@ -3,10 +3,6 @@
 
 ## Meeting 01
 
-### Uhrzeit: 
-    xx:xx Uhr
-
-
 ### Teilnehmer:
     Mats
     Sascha
@@ -21,8 +17,5 @@
 - Aufgabenverteilung - Frontend/Backend - Wer macht was?
 - Crashkurs - C++ 
 
-### Kurzbeschreibung:
-
-
-
+Dauer: 4 Stunden
 
